# kinote

./: LICENSE  README.md  main.py  pyproject.toml
app/authentication/: admin.py  forms.py  models.py  urls.py  views.py
app/authentication/migrations/: 0001_initial.py
app/authentication/templates/authentication/: index.html  login.html  password_change.html  password_change_done.html  profile.html  register.html
app/core/: settings.py  urls.py
app/templates/: home.html
app/theme/static_src/: package-lock.json
app/theme/static_src/src/: styles.css
app/users/: models.py  urls.py  views.py
kinote/: manage.py
kinote/kinote/: asgi.py  settings.py  urls.py  wsgi.py
kinote/kinoteApp/: apps.py  models.py  urls.py  views.py
kinote/kinoteApp/migrations/: 0001_initial.py  0002_rename_votes_choice_votos.py
kinote/kinoteApp/templates/kinoteApp/: detail.html  index.html  results.html
