[project]
name = "kinote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiecutter>=2.7.1",
    "django>=5.2.12",
    "django-bootstrap5>=26.2",
    "django-tailwind[cookiecutter,honcho,reload]>=4.2.0",
    "django-widget-tweaks>=1.5.1",
    "honcho>=2.0.0",
]
